--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,11 @@
     "mediasoup-client": "^3.9.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-canvas-draw": "^1.2.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6"
